2008-01-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Version 0.17
	
	* config.c, ttyreader.c, aprx.conf.in, aprx.8.in:
	    Call the "serialport"  now with name "radio".
	    (Also old one works, so old config does not break.)

	* aprx.h, netax25.c, ax25.c, ttyreader.c:
	    Pass port name down to tnc2_rxgate() function where
	    it is used in rf.log outputs.  A distributed multi-
	    receiver setup log is somewhat .. odd looking when
	    most receivers get same packet.

	* logrotate.arpx.in:
	    Rotate weekly, and compress immediately.
	    Monthly turned out to be too much for "embedded"
	    OH1GSM-1 system.

2008-01-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, configure, debian/rules, rpm/aprx.spec.in,
	  rpm/aprx.init, Makefile, config.h.in:
	    More RPM / configure rework.

	* configure.in, configure, Makefile.in, Makefile, config.h.in,
	  install-sh, rpm/aprx.spec.in, debian/rules:
	    Had to add minimalistic  configure  script into system for
	    the RPM multi-target compilation to work. 

	* Makefile, rpm/aprx.spec.in, rpm/aprx.default, rpm/aprx.init:
	    RPM package build framework, including init and logrotate -scripts

2008-01-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* version 0.16

	* erlang.c:
	    Make the logged data narrower - to usually fit in 80 char lines.

	* aprx.c:
	    Always close STDIN from reading, and replace it with
	    a file handle opened on /dev/null.
	    When daemoning, close also STDOUT and STDERR, and
	    replace them with handles writing to /dev/null.
	    .. and do it as late as possible.

	* aprx.h, aprx.c, config.c, erlang.c, aprx.8.in, aprx.conf.in,
	  aprx-stat.c:
	    Add (and document) option for logging erlang data on separate
	    file without any runtime options or need to divert stdout
	    or syslog anywhere.

2008-01-08  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, ttyreader.c, erlang.c, netax25.c, aprx-stat.c: