@@ -1,4 +1,4 @@
-          INSTALL of  APRX 0.16
+          INSTALL of  APRX 0.17
 
 A rough-cut version of the installation instructions
 
