@@ -1,5 +1,5 @@
 
-		APRX    v0.16
+		APRX    v0.17
 
 A receive-only APRS-IS "i-gate" with following properties:
 
